--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js", 
+    "build": "echo 'No build step for backend'"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
